# Town

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  Trunk.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build.yml
assets/features/: apple_tree.ron  apple_tree_empty.ron  berry_bush.ron  berry_bush_empty.ron  cactus.ron  coconut_tree.ron  coconut_tree_stump.ron  door.ron  floor.ron  road.ron  rocks.ron  stone_wall.ron  tree.ron  tree_stump.ron  wall.ron
assets/tiles/: desert.ron  empty.ron  forest.ron  grassland.ron  ocean.ron  scorched.ron  shrubland.ron  snow.ron  taiga.ron  tundra.ron
assets/tilesets/: features.ron  tiles.ron
launchers/native/: Cargo.toml
launchers/native/src/: main.rs
launchers/wasm/: Cargo.toml  Docker.nginx.conf  index.html
launchers/wasm/src/: main.rs
src/: lib.rs  states.rs
src/ai/: mod.rs  spawner.rs
src/ai/actions/: components.rs  do_job.rs  drink.rs  job_destination.rs  meander.rs  mod.rs  move_to_destination.rs  move_to_water_source.rs  random_destination.rs  shared_drinking.rs  shared_pathfinding.rs  take_job.rs  water_source_destination.rs
src/ai/behaviors/: mod.rs
src/ai/characteristics/: job_seeker.rs  mod.rs  speed.rs  thirst.rs
src/ai/pickers/: highest_score.rs
src/ai/scorers/: job_available.rs  mod.rs  thirsty.rs
src/animation/: mod.rs
src/camera/: mod.rs  movement.rs
src/gui/: in_game.rs  mod.rs  navigation.rs  splash.rs  systems.rs
src/gui/in_game/: build.rs  mod.rs  orders.rs
src/jobs/: cursor.rs  job_creation.rs  job_queue.rs  mod.rs
src/map/: biomes.rs  components.rs  display.rs  features.rs  generator.rs  mod.rs  structs.rs
src/map/auto_tile/: events.rs  mod.rs  systems.rs  tile.rs
src/map_gen/: auto_tiles.rs  biomes.rs  chunks.rs  components.rs  display.rs  features.rs  generator.rs  layers.rs  map.rs  mod.rs  neighborhood.rs  objects.rs
src/simulation/: growing.rs  mod.rs
