[package]
name = "town"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "launchers/wasm",
    "launchers/native",
]

[[bin]]
name="native-launcher"
path="launchers/native/src/main.rs"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# Optimizations for WASM
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[features]
default = [
    "bevy/bevy_winit",
    "bevy/bevy_render",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/png",
    "bevy/x11",
    "bevy_kira_audio/ogg",
    "bevy_asset_loader/2d",
    "bevy_asset_loader/stageless",
    "bevy_asset_loader/progress_tracking",
    "bevy_asset_loader/progress_tracking_stageless",
    "iyes_loopless/app",
    "iyes_loopless/states",
    "bevy_tileset/variants",
    "bevy_tileset/auto-tile"
]

dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = { version = "0.8.*", default-features = false }
iyes_loopless = { version = "0.8.*", default-features = false }
iyes_progress = "0.6.*"
bevy_kira_audio = "0.13.*"
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git" }
bevy_tileset = { version = "0.5.0", default-features = false }
leafwing-input-manager = "0.6.*"
bevy-inspector-egui = "0.14.*"
bevy_turborand = "0.3.*"
bevy_asset_loader = "0.13.*"
big-brain = { git = "https://github.com/Dauthdaert/big-brain.git" }
bevy_mouse_tracking_plugin = "0.4.*"
hierarchical_pathfinding = { git = "https://github.com/mich101mich/hierarchical_pathfinding.git" }
if_chain = "1.0.2"
futures-lite = "1.12.0"
noise = { git = "https://github.com/Razaekel/noise-rs.git" }
image = "0.24.5"
winit = "0.26.1"
bevy-ui-navigation = "0.21.0"
bevy-ui-build-macros = "0.4.0"
