[package]
name = "wasm-launcher"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
town = { package = "town", path = "../.." }
bevy = { version = "0.9", default-features = false }
web-sys = { version="0.3.69", features=["Document", "Window"] }
yew = "0.19.3"
stylist = { version= "0.10.1", features=["yew_integration"] }
